[project]
name = "closecall"
version = "0.1.0"
description = "Close Call - Historical adjusted closed daily prices"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.2.3",
    "yfinance>=0.2.61",
]

[tool.black]
line-length = 96

[tool.flake8]
max-line-length = 96
max-complexity = 10
